@@ -1,4 +1,5 @@
-Send hostname/fqdn in DISCOVER and INFORM messages too.
+NIS setup (yp.conf / domainname) works again.
+Send hostname/fqdn and our parameter list in DISCOVER and INFORM messages too.
 Add more debug messages.
 Fix writing to resolv.conf when resolvconf not present.
 Include linux/if_addr.h for 2.6.19+ kernels, thanks to AlexExtreme.
